--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="Yello">#fffc00</color>
     <color name="Blue">#46A6D1</color>
     <color name="Lavender">#B266CD</color>
+    <color name="purple">#A020F0</color>
 
 
 
